# percell

./: .gitignore  .gitmodules  .importlinter  ARCHITECTURE_ROI_HANDLING.md  CHANGELOG.md  CLAUDE.md  CONVERSION_SUMMARY.md  CPSAM_SETUP.md  FEATURE_SUMMARY.md  HEADLESS_SEGMENTATION_SUMMARY.md  HEADLESS_WORKFLOW_FIXED.md  IMAC_SETUP_SUMMARY.md  INSTALL_IMAC_CATALINA.md  MANIFEST.in  PLUGIN_SYSTEM_README.md  PYPI_SETUP.md  README.md  README_IMAC_BRANCH.md  REFACTORING_PROGRESS.md  WORKFLOW_CONFIGURATION.md  callgraph_imports.dot  cell_groups.csv  check_gpu.py  collect_review.sh  debug_analyze_masks.py  docs.json  flexible_selection_plan.md  install  install.bat  install.ps1  install.py  install.sh  install_imac_catalina.sh  install_package.py  main.py  mkdocs.yml  new_files.txt  package.json  percell_auto_threshold.py  percell_config_headless_example.yaml  (+17 more)
.claude/: settings.local.json
.github/workflows/: architecture.yml  publish.yml  tests.yml
config/: config.template.json
docs/: 2025-09-02_refactoring_update.md  2025-09-02_refactoring_update_2  AUTO_THRESHOLD_README.md  BS_INTEGRATION_GUIDE.md  CENTRALIZED_PATHS.md  CONFIGURATION_MIGRATION_GUIDE.md  DOCUMENTATION.md  FULL_AUTO_THRESHOLDING.md  GLOBAL_INSTALLATION.md  GPU_SETUP_WINDOWS.md  Getting_Started.md  HEADLESS_SEGMENTATION.md  HEXAGONAL_ARCHITECTURE_IMPLEMENTATION_PLAN.md  HEXAGONAL_ARCHITECTURE_STATUS.md  HEXAGONAL_ARCHITECTURE_SUCCESS.md  MIGRATION_FLEXIBLE_SELECTION.md  PROJECT_REVIEW.md  README.md  README_REFACTORED.md  REFACTORING_CHECKLIST.md  REFACTORING_PLAN.md  REFACTORING_SUGGESTIONS_2025-08-29.md  SETUP_FIXES.md  STATUS_BAR.md  WINDOWS_GUIDE.md  api.md  ascii_alphabet.txt  code_cleanup_analysis.md  dependency_injection_analysis.md  domain_layer_mapping.md  domain_layer_review.md  domain_layer_review_2025-09-04.md  flexible_data_selection.md  main_vs_ports_adapters_refactor.diff.txt  migration_checklist.md  migration_guide.md  ports-adaptors-analysis-report.md  ports_adapters_guide.md  refactoring_checklist.md  revised_architecture_plan.md
docs/architecture/: Architecture.md  CENTRALIZED_PATHS.md  FILE_LOCATIONS_ROI.md  QUICK_REFERENCE_ROI.txt  ROI_DOCUMENTATION_INDEX.md
docs/archive/: ports-adaptors-analysis-guide.md
docs/development/: STATUS_BAR.md  progress_styles.md
docs/graphs/: callgraph_defines.dot  callgraph_uses.dot  cg_core.dot  min.dot
docs/migration/: MIGRATION_utils.md  migration_checklist.md  migration_order.md
docs/plugins/: PLUGIN_DEVELOPMENT.md  PLUGIN_DISCOVERY_EXPLAINED.md  PLUGIN_DISCOVERY_SIMPLE.md  PLUGIN_GUIDE.md  TEST_AND_DOCS_SUMMARY.md
docs/project/: percell-windows-refactoring-guide.md
docs/refactoring/: # Cursor Agent Continuation Prompt for Percell Ref  ## Refactoring Review: Percell Ports and Adapters  ## Refactoring Task: Improve Ports & Adapters Arch.md  README_REFACTORED.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  initial_cursor_prompt.md  inventory_report.md  layer_assignments.md  refactoring_guide.md
docs/setup/: QUICK_START.md  exFAT_compatibility.md
examples/: hexagonal_architecture_demo.py  ports_adapters_di_demo.py  progress_bar_options.py  progress_demo.py  progress_gallery.py
pages/: api.mdx  architecture.mdx  centralized-paths.mdx  getting-started.mdx  global-installation.mdx  index.mdx
percell/: __init__.py  progress.py
percell/adapters/: __init__.py  cellpose_conda_adapter.py  cellpose_subprocess_adapter.py  cli_user_interface_adapter.py  console_progress_adapter.py  factory.py  headless_cellpose_adapter.py  imagej_macro_adapter.py  local_filesystem_adapter.py  napari_launcher.py  napari_subprocess_adapter.py  pil_image_processing_adapter.py
percell/application/: __init__.py  advanced_workflow.py  bs_workflow.py  cli_parser.py  cli_services.py  config_api.py  config_display.py  configuration_manager.py  configuration_service_compat.py  container.py  directory_setup.py  image_processing_tasks.py  imagej_tasks.py  logger_api.py  paths_api.py  pipeline_api.py  progress_api.py  stage_classes.py  stage_registry.py  stages_api.py  step_execution_coordinator.py  ui_components.py  visualization_service.py  workflow_coordinator.py
percell/bash/: generate_call_graphs.sh  launch_napari_viewer.sh  launch_segmentation_tools.sh  prepare_input_structure.sh  setup_output_structure.sh
percell/cli/: __init__.py  app.py
percell/config/: config.imac-catalina.template.json  config.template.json
percell/core/: __init__.py  cli.py  paths.py  pipeline.py  progress.py  stages.py  utils.py
percell/domain/: __init__.py  cqrs.py  exceptions.py  models.py  plugin.py  ports.py
percell/infrastructure/: __init__.py  file_service.py  imagej_service.py  (+1 more)
refactoring_review/: architecture_diff.txt  commit_history.txt
scripts/: migrate_config.py  split_stages.py
single_cell_analyzer/: __init__.py
src/: __init__.py
tests/: __init__.py  cell_clustering_comparison.py  ports_adapters_smoke.py  test_architecture_contracts.py  test_event_bus_and_executor.py  test_full_staged_run.py  test_hexagonal_architecture.py  test_paths.py  test_pipeline_end_to_end_fake.py  test_pipeline_smoke.py  test_plugin_manager.py  test_plugin_manager_failures.py  test_workflow_config.py
(+361 files in other folders)
