[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "percell"
version = "1.0.0"
description = "Microscopy Per Cell Analysis Pipeline - Global Installation Available"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Joshua Marcus", email = "joshua.marcus@bcm.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.2",
    "pandas>=1.3.3",
    "scipy>=1.10.1",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "opencv-python>=4.5.0",
    "tqdm>=4.62.0",
    "tifffile>=2022.7.28",
    "natsort>=8.0.0",
    "read-roi>=1.6.0",
    "pillow>=9.0.0",
    "scikit-image>=0.19.1",
    "python-json-logger>=2.0.0",
    "colorama>=0.4.4",
    "alive-progress>=3.3.0",
    # Napari and visualization dependencies
    "napari[all]>=0.6.0",
    "vispy>=0.15.2",
    "psygnal>=0.10.0",
    "magicgui>=0.7.0",
    "qtpy>=2.3.1",
    "superqt>=0.7.4",
    "PyQt5>=5.15.8",
    "PyQt5-sip>=12.15",
    "PyQt5-Qt5>=5.15.2",
    "zarr>=2.12.0",
    "dask[array]>=2021.10.0",
    "pooch>=1.6.0",
    "pint>=0.17",
    "psutil>=5.9.0",
    "napari-console>=0.1.1",
    "napari-plugin-engine>=0.1.9",
    "napari-svg>=0.1.8",
    "npe2>=0.7.9",
    "triangle>=20230923",
    "numba>=0.57.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]

[project.scripts]
percell = "percell.main.main:main"

[project.urls]
Homepage = "https://github.com/marcusjoshm/percell"
Repository = "https://github.com/marcusjoshm/percell"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "percell*",
    "percell.adapters*",
    "percell.application*", 
    "percell.domain*",
    "percell.domain.services*",
    "percell.main*",
    "percell.ports*",
    "percell.ports.driven*",
    "percell.ports.driving*",
]

[tool.setuptools.package-data]
percell = [
    "config/*.json",
    "config/*.template.json", 
    "bash/*.sh",
    "macros/*.ijm",
    "art/*.png",
    "setup/*.txt",
    "setup/*.py",
    "setup/*.sh",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = 'black'
line_length = 88

[tool.ruff]
target-version = 'py311'
line-length = 88
select = ['E', 'F', 'W', 'I', 'N']

